ProfileActivity: Replace fragments instead of hiding
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material.Light.DarkActionBar">
+        <activity
+            android:name=".ProfileDetailActivity"
+            android:label=""
+            android:parentActivityName=".ProfileListActivity" />
         <activity android:name=".ProfileListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
