ProfileEdit: Add empty activity/fragment
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".ProfileDetailActivity"
             android:label=""
             android:parentActivityName=".ProfileListActivity" />
+        <activity
+            android:name=".ProfileEditActivity"
+            android:label="@string/edit_activity_title" />
         <activity android:name=".ProfileListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
