ConfigAddActivity: Add an standalone config-creating activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ConfigAddActivity"
+            android:label="@string/edit_activity_title" />
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/settings" />
 
