manifest: ConfigActivity is parent to AddActivity
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         </activity>
         <activity
             android:name=".AddActivity"
-            android:label="@string/add_activity_title" />
+            android:label="@string/add_activity_title"
+            android:parentActivityName=".ConfigActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settings">
