--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "27.0.0"
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileSdkVersion 26
+    compileSdkVersion 27
     dataBinding {
         enabled true
     }
     defaultConfig {
         applicationId "com.wireguard.android"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 100
         versionName "0.1.0"
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
