--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         </activity>
 
         <activity
+            android:name=".NotSupportedActivity"
+            android:label="@string/not_supported"
+            android:parentActivityName=".ConfigActivity" />
+
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/settings"
             android:parentActivityName=".ConfigActivity">
