ConfigListFragment: Use a floating action menu
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,6 @@ android {
 }
 
 dependencies {
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
