app: Enable Java 8 features
Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     compileSdkVersion 27
     dataBinding {
         enabled true
