--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,20 @@ android {
 }
 
 dependencies {
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+    implementation 'com.android.databinding:library:1.3.3'
+    implementation 'com.android.support:support-annotations:27.0.2'
+    implementation 'com.commonsware.cwac:crossport:0.2.1'
+    implementation 'com.gabrielittner.threetenbp:lazythreetenbp:0.2.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.google.dagger:dagger:2.14.1'
+    implementation 'net.sourceforge.streamsupport:android-retrofuture:1.6.0'
+    implementation 'net.sourceforge.streamsupport:android-retrostreams:1.6.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+}
+
+repositories {
+    maven {
+        url "https://s3.amazonaws.com/repo.commonsware.com"
+    }
 }
