--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/tools/wireguard"]
 	path = app/tools/wireguard
 	url = https://git.zx2c4.com/WireGuard
+[submodule "app/tools/wireguard-go"]
+	path = app/tools/wireguard-go
+	url = https://git.zx2c4.com/wireguard-go
