--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,16 +29,24 @@ android {
         }
     }
 }
+ext {
+    databindingVersion = '3.1.1'
+    supportLibsVersion = '27.1.1'
+    daggerVersion = '2.14.1'
+    crossportVersion = '0.2.1'
+    fabLibVersion = '1.10.1'
+    streamsupportVersion = '1.6.0'
+}
 
 dependencies {
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
-    implementation 'com.android.databinding:library:1.3.3'
-    implementation 'com.android.support:support-annotations:27.0.2'
-    implementation 'com.commonsware.cwac:crossport:0.2.1'
-    implementation 'com.getbase:floatingactionbutton:1.10.1'
-    implementation 'com.google.dagger:dagger:2.14.1'
-    implementation 'net.sourceforge.streamsupport:android-retrofuture:1.6.0'
-    implementation 'net.sourceforge.streamsupport:android-retrostreams:1.6.0'
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    implementation "com.android.databinding:library:$databindingVersion"
+    implementation "com.android.support:support-annotations:$supportLibsVersion"
+    implementation "com.commonsware.cwac:crossport:$crossportVersion"
+    implementation "com.getbase:floatingactionbutton:$fabLibVersion"
+    implementation "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
+    implementation "net.sourceforge.streamsupport:android-retrostreams:$streamsupportVersion"
 }
 
 repositories {
