--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation "com.google.dagger:dagger:$daggerVersion"
     implementation "com.android.databinding:library:$databindingVersion"
     implementation "com.android.support:support-annotations:$supportLibsVersion"
+    implementation "com.android.support:appcompat-v7:$supportLibsVersion"
+    implementation "com.android.support:preference-v7:$supportLibsVersion"
     implementation "com.commonsware.cwac:crossport:$crossportVersion"
     implementation "com.getbase:floatingactionbutton:$fabLibVersion"
     implementation "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
