SettingsActivity: Define preferenceTheme for AppCompat
Signed-off-by: Harsh Shandilya <harsh@prjkt.io>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/settings"
+            android:theme="@style/SettingsTheme"
             android:parentActivityName=".activity.MainActivity" />
 
         <activity
