--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,6 @@ ext {
     databindingVersion = '3.1.2'
     supportLibsVersion = '27.1.1'
     daggerVersion = '2.14.1'
-    crossportVersion = '0.2.1'
     fabLibVersion = '1.10.1'
     streamsupportVersion = '1.6.0'
 }
@@ -44,15 +43,9 @@ dependencies {
     implementation "com.android.databinding:library:$databindingVersion"
     implementation "com.android.support:support-annotations:$supportLibsVersion"
     implementation "com.android.support:appcompat-v7:$supportLibsVersion"
+    implementation "com.android.support:design:$supportLibsVersion"
     implementation "com.android.support:preference-v7:$supportLibsVersion"
-    implementation "com.commonsware.cwac:crossport:$crossportVersion"
     implementation "com.getbase:floatingactionbutton:$fabLibVersion"
     implementation "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
     implementation "net.sourceforge.streamsupport:android-retrostreams:$streamsupportVersion"
-}
-
-repositories {
-    maven {
-        url "https://s3.amazonaws.com/repo.commonsware.com"
-    }
 }
