--- a/app/tools/CMakeLists.txt
+++ b/app/tools/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
 # Work around https://github.com/android-ndk/ndk/issues/602
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=gold")
 
-add_executable(libwg-quick.so wg-quick.c)
+add_executable(libwg-quick.so wireguard/src/tools/wg-quick/android.c)
 target_compile_options(libwg-quick.so PUBLIC -O3 -std=gnu11 -Wall -pedantic -Wno-missing-field-initializers)
 
 file(GLOB WG_SOURCES wireguard/src/tools/*.c libmnl/src/*.c)
