--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <permission
+        android:name="com.wireguard.android.permission.CONTROL_TUNNELS"
+        android:protectionLevel="dangerous"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/permission_label"
+        android:description="@string/permission_description" />
+
     <application
         android:name=".Application"
         android:allowBackup="false"
@@ -50,9 +57,13 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".backend.WgQuickBackend$WgQuickChangeReceiver">
+        <receiver
+            android:name=".model.TunnelManager$IntentReceiver"
+            android:permission="com.wireguard.android.permission.CONTROL_TUNNELS">
             <intent-filter>
-                <action android:name="com.wireguard.android.WGQUICK_CHANGE" />
+                <action android:name="com.wireguard.android.action.REFRESH_TUNNEL_STATES" />
+                <action android:name="com.wireguard.android.action.SET_TUNNEL_UP" />
+                <action android:name="com.wireguard.android.action.SET_TUNNEL_DOWN" />
             </intent-filter>
         </receiver>
 
